Generate questions for Session